NLA Editor - Proportional editing not working in the Adjust Last Operation panel for the Transform items #101709

Closed
opened 2022-10-09 11:42:57 +02:00 by Reiner Prokein · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-06 06:33, hash: 0484b6bb18
Worked: (newest version of Blender that worked as expected)

Short description of error
In the NLA Editor we got new adjust last operator panels for the transform operations move, extend and scale. The Proportional item in this panel does not activate.

Exact steps for others to reproduce the error

  • Open Blender
  • Create some Keyframes
  • Switch to NLA
  • Convert to Clip
  • In Edit Menu > Transform use for example the Move tool
  • Open the Adjust Last Operation panel
  • Try to activate Proportional Editing

This panels is new implemented. So i guess it gots overlooked.

As a side note. Move in the Menu misses the hotkey entry. Which should be G.

proportional.jpg

2022-10-09 11-33-17.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-06 06:33, hash: `0484b6bb18` Worked: (newest version of Blender that worked as expected) **Short description of error** In the NLA Editor we got new adjust last operator panels for the transform operations move, extend and scale. The Proportional item in this panel does not activate. **Exact steps for others to reproduce the error** - Open Blender - Create some Keyframes - Switch to NLA - Convert to Clip - In Edit Menu > Transform use for example the Move tool - Open the Adjust Last Operation panel - Try to activate Proportional Editing This panels is new implemented. So i guess it gots overlooked. As a side note. Move in the Menu misses the hotkey entry. Which should be G. ![proportional.jpg](https://archive.blender.org/developer/F13643545/proportional.jpg) [2022-10-09 11-33-17.mp4](https://archive.blender.org/developer/F13643547/2022-10-09_11-33-17.mp4)
Author

Added subscriber: @tiles

Added subscriber: @tiles
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

Since it is transform code, @mano-wii might be interested.
Note in 2.83.20 Proportional Editing can be activated (though it is not functional there either)

Since it is transform code, @mano-wii might be interested. Note in 2.83.20 Proportional Editing can be activated (though it is not functional there either)

I tried different solutions, but hiding unsupported properties is not a simple thing to solve in the "Transform" operator.
The "Transform" operator is a generic operator for many different types of data in different spaces.
Several variables define the data being transformed so that detecting this data is a heavy operation to poll each property.
Some kind of global cache would be needed.

Therefore, the solution will be:

  • do not save the "use_proportional_edit" property if it is not supported. (This prevents it from being automatically disabled);
  • hide "use_proportional_edit" in SPACE_NLA
I tried different solutions, but hiding unsupported properties is not a simple thing to solve in the "Transform" operator. The "Transform" operator is a generic operator for many different types of data in different spaces. Several variables define the data being transformed so that detecting this data is a heavy operation to poll each property. Some kind of global cache would be needed. Therefore, the solution will be: - do not save the "use_proportional_edit" property if it is not supported. (This prevents it from being automatically disabled); - hide "use_proportional_edit" in `SPACE_NLA`

This issue was referenced by f9c6e0c814

This issue was referenced by f9c6e0c814b673c31be162e8dbd9ac7c1bc7c5d8

This issue was referenced by 65b42d8c57

This issue was referenced by 65b42d8c57537098828fd6acca6793aa9a093474

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-10-11 17:48:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101709
No description provided.